--- a/app36t/applicant36t/doctype/applicant_skills/applicant_skills.json
+++ b/app36t/applicant36t/doctype/applicant_skills/applicant_skills.json
@@ -28,17 +28,19 @@
    "options": "NumbersList"
   },
   {
+   "allow_in_quick_entry": 1,
    "fieldname": "rating",
    "fieldtype": "Rating",
    "in_list_view": 1,
    "in_standard_filter": 1,
-   "label": "Rating"
+   "label": "Rating",
+   "options": "3"
   }
  ],
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2024-10-22 10:40:18.480578",
+ "modified": "2024-11-06 19:59:33.832668",
  "modified_by": "Administrator",
  "module": "Applicant36t",
  "name": "Applicant Skills",
